--- a/package.json
+++ b/package.json
@@ -2,11 +2,26 @@
   "name": "baxture-technology",
   "version": "1.0.0",
   "description": "CRUD API assignment",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:prod":"webpack --config webpack.prod.js --mode production && node ./prod-build/main.js",
+    "start:dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "Jayesh Malviya",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "babel-loader": "^9.1.3",
+    "nodemon": "^3.0.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
