--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "CRUD API assignment",
   "main": "src/server.js",
   "scripts": {
-    "start:prod":"webpack --config webpack.prod.js --mode production && node ./prod-build/main.js",
-    "start:dev": "nodemon src/server.js"
+    "start:prod": "webpack --config webpack.prod.js --mode production && node ./prod-build/main.js",
+    "start:dev": "nodemon src/server.js",
+    "test":"jest --watchAll"
   },
   "keywords": [],
   "author": "Jayesh Malviya",
@@ -19,7 +20,9 @@
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "babel-loader": "^9.1.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
